--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <table cellspacing="20">
-        <td><img src="images/akanksha.jpg" alt="Akanksha Raju profil picture"></td>
+        <td><img src="akanksha.jpg" alt="Akanksha Raju profil picture"></td>
         <td><h1>Akanksha Raju</h1>
             <p><em>Product designer at <strong>SCINET</strong>.</em></p>
             <p>I design products to improve the scope of scientific research on Web3.</p></td>
