--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <input type="text" name="yourName" value="">
             <br>
             <label>Your email</label>
-            <input type="email" name="yourEmail" value="">
+            <input type="email" name="email" id="email">
             <br>
             <label>Your message</label><br>
             <textarea name="yourMessage" rows="10" columns="30"></textarea>
